--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
+
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -61,76 +63,52 @@
 
   <main>
 
-    <section id="presentacion" class="px-4 pt-5 my-5 text-center border-bottom">
-      <h1 class="display-4 fw-bold text-body-emphasis">Centered screenshot</h1>
-      <div class="col-lg-6 mx-auto">
-        <p class="lead mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most
-          popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive
-          prebuilt components, and powerful JavaScript plugins.</p>
-        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-          <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3">Primary button</button>
-          <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button>
+    <section id="presentacion" class="container col-xxl-8 px-4 py-5">
+      <div class="row flex-lg-row-reverse  align-items-center  g-5 py-5">
+        <div class="col-10 col-sm-8 col-lg-6" shadow p-3 rounded border>
+          <img
+            src="https://www.servnet.mx/hs-fs/hubfs/imagenes%20art%20sept/05%20Codigo%20HTML%2C%20CSS%20y%20Javascript.png?width=900&name=05%20Codigo%20HTML%2C%20CSS%20y%20Javascript.png"
+            class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
         </div>
-      </div>
-      <div class="overflow-hidden" style="max-height: 30vh;">
-        <div class="container px-5">
-          <img src="bootstrap-docs.png" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image"
-            width="700" height="500" loading="lazy">
+        <div class="col-lg-6">
+          <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Shadday Muñoz Hernández
+            <p class="lead">Desarrolladora blah, blah. Desarrolladora blah, blah. Desarrolladora blah, blah.
+              Desarrolladora blah, blah. Desarrolladora blah, blah.</p>
+            <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+              <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Contáctame</button>
+              <button type="button" class="btn btn-outline-secondary btn-lg px-4">malinalibb98@gmail.com</button>
+            </div>
         </div>
       </div>
     </section>
 
     <section id="habilidades" class="container px-4 py-5">
-      <h2 class="pb-2 border-bottom">Hanging icons</h2>
+      <h2 class="pb-2 border-bottom">Habilidades</h2>
       <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
-        <div class="col d-flex align-items-start">
+        <div class="feature col">
           <div
-            class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-            <svg class="bi" width="1em" height="1em">
-              <use xlink:href="#toggles2"></use>
-            </svg>
+              class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary fs-2 px-3 py-2 rounded m-2">
+              <i class="bi bi-stars"></i>
           </div>
-          <div>
-            <h3 class="fs-2 text-body-emphasis">Featured title</h3>
-            <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and
-              probably just keep going until we run out of words.</p>
-            <a href="#" class="btn btn-primary">
-              Primary button
-            </a>
-          </div>
+          <h3 class="fs-2 text-body-emphasis">Neuro</h3>
+          <p>Análisis científico</p>
+      </div>
+      <div class="feature col">
+        <div
+            class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary fs-2 px-3 py-2 rounded m-2">
+            <i class="bi bi-stars"></i>
         </div>
-        <div class="col d-flex align-items-start">
-          <div
-            class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-            <svg class="bi" width="1em" height="1em">
-              <use xlink:href="#cpu-fill"></use>
-            </svg>
-          </div>
-          <div>
-            <h3 class="fs-2 text-body-emphasis">Featured title</h3>
-            <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and
-              probably just keep going until we run out of words.</p>
-            <a href="#" class="btn btn-primary">
-              Primary button
-            </a>
-          </div>
-        </div>
-        <div class="col d-flex align-items-start">
-          <div
-            class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-            <svg class="bi" width="1em" height="1em">
-              <use xlink:href="#tools"></use>
-            </svg>
-          </div>
-          <div>
-            <h3 class="fs-2 text-body-emphasis">Featured title</h3>
-            <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and
-              probably just keep going until we run out of words.</p>
-            <a href="#" class="btn btn-primary">
-              Primary button
-            </a>
-          </div>
-        </div>
+        <h3 class="fs-2 text-body-emphasis">Neuro</h3>
+        <p>Análisis científico</p>
+    </div>
+    <div class="feature col">
+      <div
+          class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary fs-2 px-3 py-2 rounded m-2">
+          <i class="bi bi-stars"></i>
+      </div>
+      <h3 class="fs-2 text-body-emphasis">Neuro</h3>
+      <p>Análisis científico</p>
+  </div>
       </div>
     </section>
 
@@ -292,16 +270,16 @@
 
   <footer id="contacto" class="container">
     <div class="py-3 my-4">
-        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Features</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Pricing</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQs</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
-        </ul>
-        <p class="text-center text-body-secondary">© 2024 Company, Inc</p>
+      <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Features</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Pricing</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQs</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
+      </ul>
+      <p class="text-center text-body-secondary">© 2024 Company, Inc</p>
     </div>
-</footer>
+  </footer>
 
 
 
