--- a/index.html
+++ b/index.html
@@ -72,11 +72,10 @@
         </div>
         <div class="col-lg-6">
           <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Shadday Muñoz Hernández
-            <p class="lead">Desarrolladora blah, blah. Desarrolladora blah, blah. Desarrolladora blah, blah.
-              Desarrolladora blah, blah. Desarrolladora blah, blah.</p>
+            <p class="lead"> Alumna de Neurociencias, neurocientífica en proceso.</p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-              <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Contáctame</button>
-              <button type="button" class="btn btn-outline-secondary btn-lg px-4">malinalibb98@gmail.com</button>
+              <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Proyectos</button>
+              <button type="button" class="btn btn-outline-secondary btn-lg px-4">shaddaymuhz@gmail.com</button>
             </div>
         </div>
       </div>
